# Crazy-Maze

./: CMakeLists.txt  Makefile  README.md  game.cpp  game.h  player.cpp  player.h
Tests/: Test_Game.cpp  Test_Game_map.cpp  Test_Player.cpp  Test_cell.cpp
assets/maps/: background.csv  ground.csv  middleground.csv
assets/music/: music.csv
assets/skins/: skins.csv
assets/sounds/: sounds.csv
src/: cell.cpp  cell.h  controls.cpp  controls.h  csv_loader.cpp  csv_loader.h  game.cpp  game.h  game_map.cpp  game_map.h  graphics.cpp  graphics.h  main.cpp  menu.cpp  menu.h  player.cpp  player.h  sound_manager.cpp  sound_manager.h  sprite_animator.cpp  sprite_animator.h  texture_loader.cpp  texture_loader.h
src/draw/: background.cpp  background.h  gui.cpp  gui.h  item_draw.cpp  item_draw.h  menu_draw.cpp  menu_draw.h  menu_element.cpp  menu_element.h  player_draw.cpp  player_draw.h  size_excepcion.h  tiles.cpp  tiles.h
src/level/: background.h  tiles.cpp  tiles.h
